clusters/takeout/core-system/storage/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "http://longhorn-oauth2-proxy.longhorn-system.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
    nignx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: ${cloudflared_tunnel_uuid}.cfargotunnel.com
spec:
  tls:
    - hosts:
        - &host "longhorn.${personal_domain}"
      secretName: *host
  rules:
    - host: longhorn.jura
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-oauth2-proxy
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  tls:
    - hosts:
        - &host "longhorn.${personal_domain}"
      secretName: *host
  rules:
    - host: longhorn.jura
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: longhorn-oauth2-proxy
                port:
                  number: 80
    - host: *host
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: longhorn-oauth2-proxy
                port:
                  number: 80
